added style and structure the table for products

--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -14,7 +14,7 @@
 
 }
 .form-style-8 h2{
-	background: #275A6B;
+	background: rgb(48, 123, 153);
 	text-transform: uppercase;
 	font-family: 'Open Sans Condensed', sans-serif;
 	color: white;
