change to buttons in product

--- a/src/components/products/Product.css
+++ b/src/components/products/Product.css
@@ -32,13 +32,10 @@
     
 }
 
-#deleteIcon{
+.delete{
     background-color: rgb(233, 20, 20);
-    color: white;
     margin-right: -20px;
-    margin-left: 15px;
-    width: 3em;
-    height: 3em;
+    margin-left: 13px;
 }
 
 #tableTitle{
